classDiagram

    class ITileRentInfo {
        <<interface>>
        +Name : string
        +Type : TileType
        +Group : ColorGroup
        +IsMortgaged : bool
        +HouseCount : int
        +BaseRent : int
        +RentByHouses : int[]
    }

    class IOwnershipService {
        <<interface>>
        +GetOwner(tile) Player
        +CountOwnedInGroup(owner, group) int
        +CountRailroadsOwned(owner) int
        +OwnsBothUtilities(owner) bool
    }

    class OwnershipServiceAdapter {
        -owners : Dictionary~ITileRentInfo, Player~
        -ownedByPlayer : Dictionary~Player, HashSet~ITileRentInfo~~
        +SetOwner(tile, owner)
        +GetOwner(tile)
        +CountOwnedInGroup(owner, group)
        +CountRailroadsOwned(owner)
        +OwnsBothUtilities(owner)
    }

    class Player {
        <<ScriptableObject>>
        +GetId()
        +GetMoney()
        +SetMoney()
        +SetColor()
    }

    class RentManager {
        -ownership : OwnershipServiceAdapter
        +SetOwner(tile, owner)
        +TryChargeRent(...)
    }

    OwnershipServiceAdapter ..|> IOwnershipService

    OwnershipServiceAdapter --> Player : owns
    OwnershipServiceAdapter --> ITileRentInfo : tracks ownership

    RentManager --> OwnershipServiceAdapter

    Player "1" --> "many" ITileRentInfo : owns >
